complete resolution of lab4 and preparation Lab5

--- a/DesignPatterns/CMakeLists.txt
+++ b/DesignPatterns/CMakeLists.txt
@@ -3,4 +3,5 @@ project(Strategy)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Inheritance main.cpp Navigation.cpp Navigation.h NaviEconomic.cpp NaviEconomic.h NaviFast.cpp NaviFast.h NaviScenic.cpp NaviScenic.h)
+add_executable(Inheritance main.cpp Navigation.cpp Navigation.h NaviEconomicStrategy.cpp NaviEconomicStrategy.h NaviFastStrategy.cpp NaviFastStrategy.h NaviScenicStrategy.cpp NaviScenicStrategy.h
+        NavigationStrategy.h)
