complete resolution of lab5 and correction of lab4'issues...Notice that: All the subtypes/subclasses(items) are implemented in ItemType.h

--- a/DesignPatterns/CMakeLists.txt
+++ b/DesignPatterns/CMakeLists.txt
@@ -4,4 +4,9 @@ project(Strategy)
 set(CMAKE_CXX_STANDARD 14)
 
 add_executable(Inheritance main.cpp Navigation.cpp Navigation.h NaviEconomicStrategy.cpp NaviEconomicStrategy.h NaviFastStrategy.cpp NaviFastStrategy.h NaviScenicStrategy.cpp NaviScenicStrategy.h
-        NavigationStrategy.h)
+        NavigationStrategy.h
+        DisplayStrategy.h
+        display_2D.cpp
+        display_2D.h
+        display_3D.cpp
+        display_3D.h)
